Thu Aug 12 23:13:58 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/doc/userguide.html:

          Updated documentation.  This document is now complete and can
          be reviewed for correctness.

        * performance-tests/Bench/tools/mkpkg:

          Added a usage message and option.

Thu Aug 12 19:15:02 UTC 2010  Brian Johnson  <johnsonb@ociweb.com>

        * DevGuideExamples/DCPS/Messenger/Publisher.cpp:

          Changed test to send each sample as a new instance
          to prevent test failures do to slow transports on
          Solaris.  (Since there was only a depth of 1 the
          previous sample was being removed, like it should be,
          when a new sample of the same instance came in)

Thu Aug 12 13:54:28 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/lj-plots.gpi:
        * performance-tests/Bench/bin/plot-density.gpi:
        * performance-tests/Bench/bin/plot-jitter.gpi:
        * performance-tests/Bench/bin/plot-quantiles.gpi:
        * performance-tests/Bench/bin/plot-throughput-testformats.gpi:
        * performance-tests/Bench/bin/plot-throughput-transports.gpi:
        * performance-tests/Bench/bin/plot-transports-scaling.gpi:
        * performance-tests/Bench/bin/plot-transports.gpi:

          Added a timestamp to the plots.

        * performance-tests/Bench/bin/extract-throughput.pl:
        * performance-tests/Bench/bin/gen-latency-stats.pl:
        * performance-tests/Bench/bin/generate-test-results.sh:
        * performance-tests/Bench/bin/run_test:
        * performance-tests/Bench/doc/userguide.html:
        * performance-tests/Bench/tests/latency/run_test.pl:
        * performance-tests/Bench/tests/thru/run_test.pl:

          Updated documentation.

        * performance-tests/Bench/tools/mkpkg:

          Updated with removed files.

        * performance-tests/Bench/bin/runcmd:
        * performance-tests/Bench/tools/convert-all:
